src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-102.snap
---
source: src/lexer.rs
description: "0xc"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xc",
        ),
    },
]
