src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-103.snap
---
source: src/lexer.rs
description: "0xd"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xd",
        ),
    },
]
