src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-104.snap
---
source: src/lexer.rs
description: "0xe"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xe",
        ),
    },
]
