src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-107.snap
---
source: src/lexer.rs
description: "0xB"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xB",
        ),
    },
]
