src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-108.snap
---
source: src/lexer.rs
description: "0xC"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xC",
        ),
    },
]
