src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-109.snap
---
source: src/lexer.rs
description: "0xD"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xD",
        ),
    },
]
