src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-110.snap
---
source: src/lexer.rs
description: "0xE"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xE",
        ),
    },
]
