src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-112.snap
---
source: src/lexer.rs
description: 0.0 0.1 00.0 00.1
---
[
    Token {
        kind: PointFloat,
        value: Number(
            "0.0",
        ),
    },
    Token {
        kind: PointFloat,
        value: Number(
            "0.1",
        ),
    },
    Token {
        kind: PointFloat,
        value: Number(
            "00.0",
        ),
    },
    Token {
        kind: PointFloat,
        value: Number(
            "00.1",
        ),
    },
]
