src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-113.snap
---
source: src/lexer.rs
description: 0e0 0e-1 0e+2
---
[
    Token {
        kind: ExponentFloat,
        value: Number(
            "0e0",
        ),
    },
    Token {
        kind: ExponentFloat,
        value: Number(
            "0e-1",
        ),
    },
    Token {
        kind: ExponentFloat,
        value: Number(
            "0e+2",
        ),
    },
]
