src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-14.snap
---
source: src/lexer.rs
description: "="
---
[
    Token {
        kind: Assign,
        value: None,
    },
]
