src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-15.snap
---
source: src/lexer.rs
description: "'"
---
[
    Token {
        kind: SingleQuote,
        value: None,
    },
]
